[package]
name = "northstar-bot"
version = "1.1.0"
authors = ["H0l0","maeve-oake"]
edition = "2021"

[dependencies]
serde_json = "1.0.143"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json", "stream", "rustls-tls"], default-features = false }
rusqlite = { version = "0.37.0", features = ["bundled"] }

[dependencies.tokio]
version = "1.47.1"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.12.4"
features = ["cache", "framework", "standard_framework", "rustls_backend"]
